--- a/lcd8bit.ioc
+++ b/lcd8bit.ioc
@@ -9,8 +9,9 @@ Mcu.CPN=STM32F107RCT6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=UART5
-Mcu.IPNb=3
+Mcu.IP2=UART4
+Mcu.IP3=UART5
+Mcu.IPNb=4
 Mcu.Name=STM32F107R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -23,10 +24,12 @@ Mcu.Pin14=PC6
 Mcu.Pin15=PC7
 Mcu.Pin16=PC8
 Mcu.Pin17=PC9
-Mcu.Pin18=PC12
-Mcu.Pin19=PD2
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PA1
-Mcu.Pin20=PB8
+Mcu.Pin20=PC12
+Mcu.Pin21=PD2
+Mcu.Pin22=PB8
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
@@ -34,7 +37,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F107RCTx
@@ -77,6 +80,10 @@ PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Signal=GPIO_Input
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
 PC13-TAMPER-RTC.Locked=true
@@ -145,6 +152,8 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 UART5.IPParameters=VirtualMode
 UART5.VirtualMode=Asynchronous
 board=custom
